--- a/ProyectoConsultas/nbproject/private/private.properties
+++ b/ProyectoConsultas/nbproject/private/private.properties
@@ -1,2 +1,9 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\alang\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+file.reference.commons-lang3-3.12.0.jar=C:\\Users\\bryan\\Desktop\\Carrera\\semestre4\\POO\\LecturaAccess\\ProyectoConsultas\\dist\\lib\\commons-lang3-3.12.0.jar
+file.reference.commons-lang3-3.12.0.jar-1=C:\\Users\\bryan\\Desktop\\Carrera\\semestre4\\POO\\LecturaAccess\\ProyectoConsultas\\dist\\lib\\commons-lang3-3.12.0.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\bryan\\Desktop\\Carrera\\semestre4\\POO\\LecturaAccess\\ProyectoConsultas\\dist\\lib\\commons-logging-1.2.jar
+file.reference.hsqldb-2.6.0-jdk8.jar=C:\\Users\\bryan\\Desktop\\Carrera\\semestre4\\POO\\LecturaAccess\\ProyectoConsultas\\dist\\lib\\hsqldb-2.6.0-jdk8.jar
+file.reference.jackcess-4.0.0.jar=C:\\Users\\bryan\\Desktop\\Carrera\\semestre4\\POO\\LecturaAccess\\ProyectoConsultas\\dist\\lib\\jackcess-4.0.0.jar
+file.reference.ucanaccess-5.0.1.jar=C:\\Users\\bryan\\Desktop\\Carrera\\semestre4\\POO\\LecturaAccess\\ProyectoConsultas\\dist\\lib\\ucanaccess-5.0.1.jar
+file.reference.ucanaccess-5.0.1.jar-1=C:\\Users\\bryan\\Desktop\\Carrera\\semestre4\\POO\\LecturaAccess\\ProyectoConsultas\\dist\\lib\\hsqldb-2.6.0-jdk8.jar
+user.properties.file=C:\\Users\\bryan\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
