--- a/ProyectoConsultas/nbproject/project.properties
+++ b/ProyectoConsultas/nbproject/project.properties
@@ -35,11 +35,16 @@ dist.jlink.output=${dist.jlink.dir}/ProyectoConsultas
 excludes=
 file.reference.commons-lang3-3.12.0.jar=C:\\Users\\alang\\Documents\\commons-lang3-3.12.0\\commons-lang3-3.12.0.jar
 file.reference.commons-lang3-3.12.0.jar-1=C:\\Users\\alang\\Documents\\Librer\u00edas Access\\commons-lang3-3.12.0.jar
+file.reference.commons-lang3-3.12.0.jar-2=C:\\Users\\alang\\Documents\\Librer\u00edas Access\\commons-lang3-3.12.0.jar
 file.reference.commons-logging-1.2.jar=C:\\Users\\alang\\Documents\\Librer\u00edas Access\\commons-logging-1.2.jar
+file.reference.commons-logging-1.2.jar-1=C:\\Users\\alang\\Documents\\Librer\u00edas Access\\commons-logging-1.2.jar
 file.reference.hsqldb-2.6.0-jdk8.jar=C:\\Users\\alang\\Documents\\Librer\u00edas Access\\hsqldb-2.6.0-jdk8.jar
+file.reference.hsqldb-2.6.0-jdk8.jar-1=C:\\Users\\alang\\Documents\\Librer\u00edas Access\\hsqldb-2.6.0-jdk8.jar
 file.reference.jackcess-4.0.0.jar=C:\\Users\\alang\\Documents\\Librer\u00edas Access\\jackcess-4.0.0.jar
+file.reference.jackcess-4.0.0.jar-1=C:\\Users\\alang\\Documents\\Librer\u00edas Access\\jackcess-4.0.0.jar
 file.reference.ucanaccess-5.0.1.jar=C:\\Users\\alang\\Documents\\UCanAccess-5.0.1.bin\\ucanaccess-5.0.1.jar
 file.reference.ucanaccess-5.0.1.jar-1=C:\\Users\\alang\\Documents\\Librer\u00edas Access\\ucanaccess-5.0.1.jar
+file.reference.ucanaccess-5.0.1.jar-2=C:\\Users\\alang\\Documents\\Librer\u00edas Access\\ucanaccess-5.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -49,7 +54,12 @@ javac.classpath=\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.hsqldb-2.6.0-jdk8.jar}:\
     ${file.reference.jackcess-4.0.0.jar}:\
-    ${file.reference.ucanaccess-5.0.1.jar-1}
+    ${file.reference.ucanaccess-5.0.1.jar-1}:\
+    ${file.reference.commons-lang3-3.12.0.jar-2}:\
+    ${file.reference.commons-logging-1.2.jar-1}:\
+    ${file.reference.hsqldb-2.6.0-jdk8.jar-1}:\
+    ${file.reference.jackcess-4.0.0.jar-1}:\
+    ${file.reference.ucanaccess-5.0.1.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
