--- a/ProyectoConsultas/nbproject/private/private.properties
+++ b/ProyectoConsultas/nbproject/private/private.properties
@@ -6,4 +6,4 @@ file.reference.hsqldb-2.6.0-jdk8.jar=C:\\Users\\bryan\\Desktop\\Carrera\\semestr
 file.reference.jackcess-4.0.0.jar=C:\\Users\\bryan\\Desktop\\Carrera\\semestre4\\POO\\LecturaAccess\\ProyectoConsultas\\dist\\lib\\jackcess-4.0.0.jar
 file.reference.ucanaccess-5.0.1.jar=C:\\Users\\bryan\\Desktop\\Carrera\\semestre4\\POO\\LecturaAccess\\ProyectoConsultas\\dist\\lib\\ucanaccess-5.0.1.jar
 file.reference.ucanaccess-5.0.1.jar-1=C:\\Users\\bryan\\Desktop\\Carrera\\semestre4\\POO\\LecturaAccess\\ProyectoConsultas\\dist\\lib\\hsqldb-2.6.0-jdk8.jar
-user.properties.file=C:\\Users\\bryan\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=C:\\Users\\jackr\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
